syntax = "proto3";

package notification;

service NotificationService {
}

